--- a/css/style.css
+++ b/css/style.css
@@ -98,13 +98,12 @@ header{
     height: 8.5vh;
     width: 4.5vw;
     padding-top: 2vh;
-
 }
 .banner{
     margin-top: 1vh;
-    border: 2px solid black;
-    height: 100vh;
-    /* width: 100%; */
-    /* box-sizing: border-box; */
-    background-image: url("../img/ranbir.jpg");  
+    /* border: 2px solid black; */
+    height: 60vh;
+    background-image: url("../img/ranbir_edited.jpg");  
+    background-size: cover;
 }
+
